# frog-esp-idf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
