idf_component_register(
    INCLUDE_DIRS
        "."
    SRCS
        "main.c"
        "shell.c"
        "wifi.c"
        "nvs.c"
    PRIV_REQUIRES
        "golioth_sdk"
        "console"
        "spi_flash"
        "nvs_flash"
        "json"
        "driver"
        "esp_hw_support"
        "lc709203f"
        "scd30"
        "dps310"
)